test/files/errors/only_whitespace.scm
; Test: Only whitespace - should return exit code 84 or handle gracefully
   
	
